plausible/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible2-analytics
  namespace: shared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plausible2-analytics
  template:
    metadata:
      labels:
        app: plausible2-analytics
    spec:
      volumes:
        - name: app-tmp
          emptyDir: {}
        - name: scripts-volume
          configMap:
            name: plausible2-analytics
      # initContainers:
      #   - name: create-db
      #     image: plausible2
      #     command:
      #       - 'sh'
      #       - '/entrypoint.sh'
      #       - 'db'
      #       - 'createdb'
      #     env:
      #       - name: DATABASE_URL
      #         valueFrom:
      #           secretKeyRef:
      #             key: DATABASE_URL_15
      #             name: plausible-plausible-analytics
      #     volumeMounts:
      #       - name: app-tmp
      #         mountPath: /app/tmp
      #     resources: {}
      #
      #   - name: migrate-db
      #     image: plausible2
      #     command:
      #       - 'sh'
      #       - '/entrypoint.sh'
      #       - 'db'
      #       - 'migrate'
      #     env:
      #       - name: DATABASE_URL
      #         valueFrom:
      #           secretKeyRef:
      #             key: DATABASE_URL_15
      #             name: plausible-plausible-analytics
      #     volumeMounts:
      #       - name: app-tmp
      #         mountPath: /app/tmp
      #     resources: {}

      containers:
        - name: plausible2-analytics
          image: plausible2
          command: ['/entrypoint.sh', 'run']
          # command: [ "sleep" ]
          # args: [ "infinity" ]
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          
          resources: {}
          volumeMounts:
            - name: app-tmp
              mountPath: /app/tmp
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext: {}
      restartPolicy: Always
