plausible/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plausible2-analytics
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plausible2.lb.djnd.si
      secretName: plausible2-tls
  rules:
    - host: plausible2.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: plausible2-analytics
                port:
                  number: 80
